crates/tui/src/ui/snapshots/ms_todo_tui__ui__gap_tests__clearing_several_due_dates_asks_first.snap
---
source: crates/tui/src/ui/gap_tests.rs
expression: "format!(\"{prompt}\\n{}\", last(&render(&app)))"
---
" Due date for 4 tasks: █ Enter Done  Esc Cancel  Enter on empty: clear                                        "
" Clear the due dates of 4 tasks?  y Clear  n Keep                                                             "
