crates/tui/src/ui/snapshots/ms_todo_tui__ui__gap_tests__reading_the_inbox.snap
---
source: crates/tui/src/ui/gap_tests.rs
expression: frame
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ╭ Suggest lists for inbox ─────────────────────────────────────╮ none                 │"
"│… Someday             │Reading the inbox…                                            │ high                 │"
"│✓ Completed          1│                                                              │ none                 │"
"│≡ Tasks               │                                                              │ none                 │"
"│≡ Home               3│                                                              │ monthly on day 1     │"
"│                      │                                                              │ none                 │"
"│                      │                                                              │ none                 │"
"│                      ╰──────────────────────────────────────────────────────────────╯ none                 │"
"│                      ││                                                  ││Sync       synced               │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││Notes      none                 │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││                                │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Move there  s Skip  Esc Stop                                                                           "
