crates/tui/src/ui/snapshots/ms_todo_tui__ui__gap_tests__the_inbox_triage.snap
---
source: crates/tui/src/ui/gap_tests.rs
expression: "format!(\"{asking}\\n{found}\\n{nothing}\\n{}\", render(&app))"
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ╭ Inbox 1 of 3 ────────────────────────────────────────────────╮ none                 │"
"│… Someday             │Buy paint                                                     │ high                 │"
"│✓ Completed          1│                                                              │ none                 │"
"│≡ Tasks               │Suggested  asking…                                            │ none                 │"
"│≡ Home               3│                                                              │ monthly on day 1     │"
"│                      │                                                              │ none                 │"
"│                      │                                                              │ none                 │"
"│                      ╰──────────────────────────────────────────────────────────────╯ none                 │"
"│                      ││                                                  ││Sync       synced               │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││Notes      none                 │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││                                │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Move there  s Skip  Esc Stop                                                                           "

" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ╭ Inbox 1 of 3 ────────────────────────────────────────────────╮ none                 │"
"│… Someday             │Buy paint                                                     │ high                 │"
"│✓ Completed          1│                                                              │ none                 │"
"│≡ Tasks               │Suggested  Home  82% sure                                     │ none                 │"
"│≡ Home               3│                                                              │ monthly on day 1     │"
"│                      │                                                              │ none                 │"
"│                      │                                                              │ none                 │"
"│                      ╰──────────────────────────────────────────────────────────────╯ none                 │"
"│                      ││                                                  ││Sync       synced               │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││Notes      none                 │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││                                │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Move there  s Skip  Esc Stop                                                                           "

" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ╭ Inbox 2 of 3 ────────────────────────────────────────────────╮ none                 │"
"│… Someday             │Fix the gate                                                  │ high                 │"
"│✓ Completed          1│                                                              │ none                 │"
"│≡ Tasks               │Suggested  no list is likely enough                           │ none                 │"
"│≡ Home               3│                                                              │ monthly on day 1     │"
"│                      │                                                              │ none                 │"
"│                      │                                                              │ none                 │"
"│                      ╰──────────────────────────────────────────────────────────────╯ none                 │"
"│                      ││                                                  ││Sync       synced               │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││Notes      none                 │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││                                │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Move there  s Skip  Esc Stop                                                                           "

" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ╭ Inbox 3 of 3 ────────────────────────────────────────────────╮ none                 │"
"│… Someday             │Call the bank                                                 │ high                 │"
"│✓ Completed          1│                                                              │ none                 │"
"│≡ Tasks               │list suggestions are off; to turn them on, set `enabled =     │ none                 │"
"│≡ Home               3│true` under [suggest] in ~/.config/ms-todo/config.toml, then  │ monthly on day 1     │"
"│                      │restart the daemon with `ms-todo daemon stop`                 │ none                 │"
"│                      │                                                              │ none                 │"
"│                      ╰──────────────────────────────────────────────────────────────╯ none                 │"
"│                      ││                                                  ││Sync       synced               │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││Notes      none                 │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││                                │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Move there  s Skip  Esc Stop                                                                           "
