crates/tui/src/ui/snapshots/ms_todo_tui__ui__gap_tests__the_start_and_repeat_fields.snap
---
source: crates/tui/src/ui/gap_tests.rs
expression: "format!(\"{start}\\n{repeat}\\n{}\", render(&app))"
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Call Sam             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        none                 │"
"│◔ Assigned            ││                                                  ││Start      next mon█            │"
"│⧖ Upcoming            ││                                                  ││           → Mon 28 Sep         │"
"│… Someday             ││                                                  ││Reminder   none                 │"
"│✓ Completed          1││                                                  ││Importance normal               │"
"│≡ Tasks               ││                                                  ││Assignee   none                 │"
"│≡ Home               3││                                                  ││Defer      none                 │"
"│                      ││                                                  ││Repeat     none                 │"
"│                      ││                                                  ││Steps      none                 │"
"│                      ││                                                  ││Link       none                 │"
"│                      ││                                                  ││Files      none                 │"
"│                      ││                                                  ││Sync       ◌ pending: waiting to│"
"│                      ││                                                  ││reach Microsoft To Do           │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││Notes      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Edit start:  Enter Done  Esc Cancel  ←/→ Move                                                                "

" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Call Sam             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        none                 │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ││                                                  ││Reminder   none                 │"
"│… Someday             ││                                                  ││Importance normal               │"
"│✓ Completed          1││                                                  ││Assignee   none                 │"
"│≡ Tasks               ││                                                  ││Defer      none                 │"
"│≡ Home               3││                                                  ││Repeat     every 2 weeks on tue█│"
"│                      ││                                                  ││           → every other week on│"
"│                      ││                                                  ││Tue, first due Tue 29 Sep       │"
"│                      ││                                                  ││Steps      none                 │"
"│                      ││                                                  ││Link       none                 │"
"│                      ││                                                  ││Files      none                 │"
"│                      ││                                                  ││Sync       ◌ pending: waiting to│"
"│                      ││                                                  ││reach Microsoft To Do           │"
"│                      ││                                                  ││                                │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Edit repeat:  Enter Done  Esc Cancel  ←/→ Move                                                               "

" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      fri█                 │"
"│⧖ Upcoming            ││                                                  ││           It repeats, and      │"
"│… Someday             ││                                                  ││Microsoft To Do keeps no start  │"
"│✓ Completed          1││                                                  ││date on a repeating task; empty │"
"│≡ Tasks               ││                                                  ││Repeat first                    │"
"│≡ Home               3││                                                  ││Reminder   none                 │"
"│                      ││                                                  ││Importance high                 │"
"│                      ││                                                  ││Assignee   none                 │"
"│                      ││                                                  ││Defer      none                 │"
"│                      ││                                                  ││Repeat     monthly on day 1     │"
"│                      ││                                                  ││Steps      none                 │"
"│                      ││                                                  ││Link       none                 │"
"│                      ││                                                  ││Files      none                 │"
"│                      ││                                                  ││Sync       synced               │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Edit start:  Enter Done  Esc Cancel  ←/→ Move                                                                "
